--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -3,17 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Welcome - Dashboard</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f0f2f5;
+        }
+
+        .dashboard {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #dc3545;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #c82333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome!</h1>
-    <button onclick="logout()">Logout</button>
+    <div class="dashboard">
+        <div class="header">
+            <h1>Welcome to Your Dashboard</h1>
+            <button onclick="logout()">Logout</button>
+        </div>
+        <div class="content">
+            <p>You have successfully logged in!</p>
+            <!-- Add more dashboard content here -->
+        </div>
+    </div>
 
     <script>
-        function logout() {
-            localStorage.removeItem("token");
-            window.location.href = "index.html";
+        // Check if user is logged in
+        function checkAuth() {
+            const token = localStorage.getItem('token');
+            if (!token) {
+                window.location.href = 'index.html';
+            }
         }
+
+        // Logout function
+        function logout() {
+            localStorage.removeItem('token');
+            window.location.href = 'index.html';
+        }
+
+        // Check authentication when page loads
+        checkAuth();
     </script>
 </body>
 </html>
